# bootcamp-python

./: exemplo_01.py
aula01/: exemplo_02.py  kpi.py
aula02/: desafio.py  exercicios.py
aula03/: desafio.py
aula04/: arquivos.py  exemplo.csv  exemplo_lista.py
aula05/: readme.md
aula06/: main.py  main2.py  pyproject.toml
aula07/: exemplo_00.py  funcoes_etl.py  main.py  pipeline_2.py
aula08/: etl.py  pipeline.py  pyproject.toml
aula09/: etl.py  exemplo__00.py  exemplo__01.py  logging_exemplo_erros.py  pyproject.toml  utils_log.py
