[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Gustavo Reis <gustavoazreis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
isort = "^6.0.0"
taskipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile="black"

[tool.taskipy.tasks]
format = """
isort main.py
black main.py
flake8 main.py
"""